# LMS_MVP

./: .cursorignore  .env_example  .gitignore  0810_plan.md  0811_summary.md  0812_suggest.md  0812_summary.md  0813_phase2_plan.md  0813_plan.md  0813_summary.md  0824_end.md  0824_next_feedback_plan.md  0824_plan.md  0824_plan2.md  0824_plan3.md  0824_구현된것.md  0824_문제생성_자동화_계획.md  0824문제해결  0824현재 상황  0825_gemi_suggestion.md  0825_gpt_plan.md  0825_master_phase.md  0825_master_plan.md  0825_master_plan2.md  0825_phase1완료.md  0825_phase2완료.md  0825_phase3완료.md  0825_phase4완료.md  0825_plan.md  0825_문제해결.md  0825_베타테스트준비완료.md  0826_checklist.md  0826_fix.md  0826_frontplan.md  0826_gemini.md  0826_plan.md  0826_문제해결.md  0827_문제파악.md  0827_문제해결.md  1024_내가느끼는부족한점  (+58 more)
backend/: .env_example  .gitignore  Dockerfile.prod  alembic.ini  analyze_routes.py  backend_health_check_results.json  check_ai_sessions.py  check_curriculum_data.py  check_db.py  check_db_status.py  check_submissions.py  check_subscription_tables.py  check_tables.py  check_user_progress.py  check_users.py  check_users_info.py  package-lock.json  pyproject.toml  quick_check_tables.py  requirements-test.txt  requirements.txt  requirements_new.txt  restart_backend.ps1  setup_db.py  start_backend_8001.ps1  test_db_connection.py  test_openrouter.py
backend/alembic/: env.py
backend/alembic/versions/: 0a6771666795_add_quote_table.py  18e7e9cf2a9c_phase9_ai_curriculum_and_teaching_.py  24897541d349_init_schema.py  2c47454cbb47_add_summary_time_recs_and_questions.py  32b7af170c59_baseline_after_phase8_scripts.py  3b295f62ef44_add_hierarchical_subject_structure.py  5a8e32d7c0fb_add_user_note_table.py  76441a356c59_add_description_to_subjects.py  8f6a841d7170_initial_schema.py  963a85d8bbe8_add_indexes_for_dashboard.py  b056eb6131d9_add_question_data_jsonb.py  b1a2c3d4e5f6_add_quiz_recent_username.py  b2ffb027ab6d_add_emotional_support_models.py  bff0900ec6b9_add_taxonomy_level_hint_explanation_to_.py  c5dfe372d2c2_add_columns_to_subject_topics.py  e51c3f1b5e7b_mvp_add_subscription_and_payment_tables.py  f1a2b3c4d5e6_add_performance_indexes.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: achievement.py  admin.py  ai_counseling.py  ai_curriculum.py  ai_features.py  ai_learning.py  ai_learning_backup_disabled.py  ai_learning_test.py  ai_questions.py  ai_teaching.py  auth.py  auth_fixed.py  beta_testing.py  code_execution.py  constitutional.py  curriculum.py  dashboard.py  dynamic_subjects.py  dynamic_subjects_fixed.py  dynamic_subjects_simple.py  emotional_support.py  feedback.py  hybrid_ai.py  metrics.py  monitoring.py  mvp_learning.py  notes.py  payment.py  pdf_export.py  personalization.py  questions.py  quotes.py  results_guard.py  review_submit.py  review_system.py  simple_topics.py  stats.py  student.py  subjects.py  submit.py  (+4 more)
backend/app/core/: anthropic_client.py  config.py  database.py  exceptions.py  security.py  settings.py  subjects.py
backend/app/middleware/: advanced_rate_limit.py  logging.py  rate_limit.py  request_id.py  security_headers.py
backend/app/models/: ai_curriculum.py  code_problem.py  dynamic_subject.py  orm.py  question.py  question_types.py  subject.py  submission.py
backend/app/models/archive/: database.py
backend/app/schemas/: admin.py
backend/app/services/: __init__.py  adaptive_difficulty_engine.py  advanced_ai_features.py  advanced_llm_optimizer.py  advanced_recommendation_engine.py  ai_mentoring_system.py  ai_providers.py  ai_question_generator.py  ai_question_generator_enhanced.py  celery_app.py  celery_tasks.py  code_execution_service.py  code_problem_service.py  curriculum_manager.py  daily_learning_service.py  database_migration_service.py  deep_learning_analyzer.py  email_service.py  enhanced_curriculum_generator.py  enhanced_learning_analytics.py  goal_based_curriculum_service.py  hybrid_ai_provider.py  langchain_curriculum_generator.py  langchain_curriculum_generator2.py  langchain_hybrid_provider.py  llm_cache.py  llm_metrics.py  llm_providers.py  llm_rate_limiter.py  mock_ai_provider.py  new_subject_generator.py  performance_monitor.py  personalized_feedback_service.py  personalized_learning_path.py  redis_service.py  scoring_service.py  streaming_handler.py  subject_manager.py  subscription_service.py  syllabus_based_teaching_agent.py  (+1 more)
backend/app/services/constitutional/: __init__.py  safe_code_assistant.py
backend/app/tasks/: email_tasks.py
backend/app/templates/emails/: payment_success.html  re_engagement.html  trial_reminder.html  welcome.html
backend/data/: db.json
backend/init_scripts/: 01_init.sql
backend/scripts/: check_endpoints.py  check_subjects.py  check_table_structure.py  check_topics.py  init_new_subjects.py  seed_admin.py  seed_curriculum_phase1.py  seed_questions.py  seed_quotes.py  seed_taxonomy.py  seed_teacher.py
backend/tests/: backend_health_check.py  check_subjects.py  conftest.py  create_env.py  fix_env.py  fix_subject_topics.py  setup_env.py  setup_multi_subjects.py  simple_server_test.py  test_ai_curriculum_auth.js  test_browser_auth.js  test_curriculum_request.json  test_llm_feedback_call.py  test_phase1_validation.py  test_phase2_validation.py  test_phase3_validation.py  test_phase4_validation.py  test_token_streaming.js  update_env.py
frontend/: .env.production.example  Dockerfile.prod  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js  vite.config.ts
frontend-backup/: .gitignore  nginx.conf  package.json  postcss.config.cjs
(+169 files in other folders)
