[project]
name = "lms-backend"
version = "1.0.0"
description = "AI 기반 개인화 학습 플랫폼 백엔드 API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "HaeungLee" }
]
keywords = ["lms", "ai", "education", "fastapi"]
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "alembic==1.13.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anthropic==0.64.0",
    "anyio==3.7.1",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "bcrypt==4.1.3",
    "billiard==4.2.1",
    "celery==5.3.4",
    "certifi==2025.8.3",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.104.1",
    "flower==2.0.1",
    "fonttools==4.59.1",
    "frozenlist==1.7.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "humanize==4.12.3",
    "idna==3.10",
    "jinja2==3.1.4",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "kiwisolver==1.4.9",
    "kombu==5.5.4",
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "langchain-core==0.3.75",
    "langchain-openai==0.3.32",
    "langchain-text-splitters==0.3.11",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib==3.10.5",
    "multidict==6.6.4",
    "numpy==2.3.2",
    "openai==1.101.0",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pyjwt==2.9.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rapidfuzz==3.5.2",
    "redis==5.0.1",
    "reportlab==4.0.9",
    "requests==2.32.5",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.35",
    "starlette==0.27.0",
    "threadpoolctl==3.6.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uvicorn==0.24.0",
    "vine==5.1.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "yarl==1.20.1",
]

[dependency-groups]
dev = [
    "faker>=38.2.0",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
