[project]
name = "lms-backend"
version = "1.0.0"
description = "AI-powered personalized learning platform backend API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "HaeungLee" }
]
keywords = ["lms", "ai", "education", "fastapi"]
dependencies = [
    "aiohappyeyeballs>=2.6.0",
    "aiohttp>=3.9.0",
    "aiosignal>=1.3.0",
    "alembic>=1.13.0",
    "amqp>=5.2.0",
    "anthropic>=0.40.0",
    "anyio>=3.7.0",
    "bcrypt>=4.1.0",
    "celery>=5.3.0",
    "email-validator>=2.1.0",
    "fastapi>=0.115.0",
    "flower>=2.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "joblib>=1.3.0",
    "kombu>=5.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "matplotlib>=3.8.0",
    "numpy>=2.0.0",
    "openai>=1.50.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "prometheus-client>=0.20.0",
    "psutil>=5.9.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.5.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.0",
    "rapidfuzz>=3.5.0",
    "redis>=5.0.0",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "sqlalchemy>=2.0.0",
    "tqdm>=4.66.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "faker>=33.0.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
